# motion-planner-reinforcement-learning

./: CMakeLists.txt  README.md  package.xml
launch/: ddpg_stage_1.launch
src/: actor_network_bn.py  critic_network.py  ddpg.py  ddpg_stage_1.py  environment.py
src/model/actor/: actor-network-100000.data-00000-of-00001  actor-network-100000.index  actor-network-110000.data-00000-of-00001  actor-network-110000.index  actor-network-120000.data-00000-of-00001  actor-network-120000.index  actor-network-130000.data-00000-of-00001  actor-network-130000.index  actor-network-140000.data-00000-of-00001  actor-network-140000.index  checkpoint
src/model/critic/: checkpoint  critic-network-100000.data-00000-of-00001  critic-network-100000.index  critic-network-110000.data-00000-of-00001  critic-network-110000.index  critic-network-120000.data-00000-of-00001  critic-network-120000.index  critic-network-130000.data-00000-of-00001  critic-network-130000.index  critic-network-140000.data-00000-of-00001  critic-network-140000.index
